[gd_scene load_steps=3 format=3 uid="uid://cqmev7fe50lfb"]

[ext_resource type="Script" path="res://scenes/game_bomb_link/bomb_link_ui.gd" id="1_nb8nu"]
[ext_resource type="PackedScene" uid="uid://b08yvkwohosos" path="res://scenes/game_bomb_link/bomb_link_fire.tscn" id="2_k27qc"]

[node name="BombLinkUI" type="Node2D" node_paths=PackedStringArray("BombLinkFire_node")]
script = ExtResource("1_nb8nu")
BombLinkFire_node = NodePath("BombLinkFire")

[node name="BombLinkFire" parent="." instance=ExtResource("2_k27qc")]

[connection signal="action_is_ended" from="." to="." method="process_next_action"]
